trying to fix width on iphone

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -1,6 +1,7 @@
 body {
     @media screen and (max-width: 600px) {
         .spell-list {
+            background: #000;
             .main {
                 -webkit-transition: all 0.5s ease;
                 -moz-transition: all 0.5s ease;
@@ -13,6 +14,7 @@ body {
                 position: relative;
                 text-align: center;
                 text-transform: uppercase;
+                width: 100%;
                 &.wiz {
                     background: #666699;
                     color: #666600;
